Trying to figure out bootstrap

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,12 +3,33 @@
 
 <head lang="en">
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>MEAN Cats App</title>
 </head>
 
 <body>
-  <div>
+  <div class="container">
+    <div class="jumbotron">
     <h1>Ben Margis</h1>
+    <h2>Junior Web Developer</h2>
+    </div>
+  </div>
+
+  <div class="container">
+  <ul class="nav nav-tabs">
+    ...
+    <li role="presentation" class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        Dropdown <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        ...
+      </ul>
+    </li>
+    ...
+  </ul>
   </div>
 
   <div ng-controller="IndexController">
