--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -32,19 +32,28 @@
   </ul>
   </div>
 
-  <div ng-controller="IndexController">
-    <p ng-show="cat.name">Your new cat's name is: {{cat.name}}</p>
-    <p ng-hide="cat.name">Enter your new cat's name!</p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-8"></div>
+      <div class="col-sm-4">
+      <div ng-controller="IndexController">
+        <p ng-show="cat.name">Your new cat's name is: {{cat.name}}</p>
+        <p ng-hide="cat.name">Enter your new cat's name!</p>
+    </div>
+
+
 
     <form novalidate>
       Name:<input type="text" ng-model="cat.name"/><br/>
       <input type="submit" ng-click="add(cat)" value="Save">
     </form>
 
-    <h4>Kitties</h4>
+    <h4>Tasks</h4>
     <ul>
       <li ng-repeat="cat in cats">{{cat.name}}</li>
     </ul>
+  </div>
+  </div>
   </div>
 
 <script src="/vendors/angular/angular.min.js" type="text/javascript"></script>
