Test to see if commits show up

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -38,7 +38,7 @@
       <div class="col-sm-4">
       <div ng-controller="IndexController">
         <p ng-show="cat.name">Your new cat's name is: {{cat.name}}</p>
-        <p ng-hide="cat.name">Enter your new cat's name!</p>
+        <p ng-hide="cat.name">Enter a new goal</p>
     </div>
 
 
