--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,6 +3,7 @@
 
   <head lang="en">
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../styles/blogPage.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
