added images folder to assets directory then added screenshot

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -32,7 +32,9 @@
 
     <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-8"></div>
+      <div class="col-lg-8">
+        <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
+      </div>
       <div class="col-sm-4">
       <div ng-controller="IndexController">
         <p ng-show="cat.name">Goals for the week of  {{cat.name}}</p>
@@ -53,6 +55,8 @@
   </div>
   </div>
   </div>
+
+
 
 <script src="/vendors/angular/angular.min.js" type="text/javascript"></script>
 <script src="/assets/scripts/app.min.js" type="text/javascript"></script>
