--- a/server/public/styles/blogPage.css
+++ b/server/public/styles/blogPage.css
@@ -1,3 +1,12 @@
 div .jumbotron {
     background-color: #2aabd2;
 }
+
+form {
+    clear: left;
+}
+
+.scrnshot {
+    height: 350px;
+    width: 600px;
+}
