--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -30,32 +30,30 @@
       </ul>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
     <div class="row">
       <div class="col-lg-8">
+        <p id="intro">My name is, as you can see above, Ben Margis. I'm starting this page as way to chronicle my progress as a web developer</p>
         <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
       </div>
       <div class="col-sm-4">
       <div ng-controller="IndexController">
         <p ng-show="cat.name">Goals for the week of  {{cat.name}}</p>
         <p ng-hide="cat.name">Enter a new goal</p>
-    </div>
 
-
-
-    <form novalidate>
+        <form novalidate>
       Name:<input type="text" ng-model="cat.name"/><br/>
       <input type="submit" ng-click="add(cat)" value="Save">
     </form>
 
-    <h4>Tasks</h4>
+    <h4>Goals</h4>
     <ul>
       <li ng-repeat="cat in cats">{{cat.name}}</li>
     </ul>
   </div>
   </div>
   </div>
-
+  </div>
 
 
 <script src="/vendors/angular/angular.min.js" type="text/javascript"></script>
