--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,37 +3,49 @@
 
   <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../styles/blogPage.css">
+
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../styles/blogPage.css">
     <title>MEAN Cats App</title>
   </head>
 
   <body>
-    <div class="container">
-      <div class="jumbotron">
+  <div class="container">
+      <div class="col-lg-12">
         <h1>Ben Margis</h1>
         <h2>Junior Web Developer</h2>
       </div>
     </div>
 
-    <div class="container">
-      <ul class="nav nav-tabs">
-        <li role="presentation" class="dropdown">
-         <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            Dropdown <span class="caret"></span>
-         </a>
-         <ul class="dropdown-menu">
-         </ul>
-        </li>
+  <div class="container">
+    <ul class="nav nav-pills">
+      <li class="main-nav active"><a href="#" class="main-link">HOME</a></li>
+      <li class="main-nav"><a href="#" class="main-link">PROJECTS</a></li>
+      <li class="main-nav"><a href="#" class="main-link">ABOUT</a></li>
+
+      <li role="presentation" class="dropdown">
+        <a class="main-nav dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+          CONTACT <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <a href="#">two</a>
+        </ul>
+      </li>
       </ul>
     </div>
+  <div class="container main-line">
+      <div class="col-lg-12">
+        </div>
+      </div>
+
+
 
     <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <p id="intro">My name is, as you can see above, Ben Margis. I'm starting this page as way to chronicle my progress as a web developer</p>
+        <p class="main-p">My name is, as you can see above, Ben Margis. I'm starting this page as way to chronicle my progress as a web developer</p>
         <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
       </div>
       <div class="col-sm-4">
