Continuing to refine static elements

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,11 +15,14 @@
   <div class="container">
       <div class="col-lg-12">
         <h1>Ben Margis</h1>
-        <h2>Junior Web Developer</h2>
       </div>
     </div>
 
   <div class="container">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+    <h2>Junior Web Developer</h2>
+      </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
     <ul class="nav nav-pills">
       <li class="main-nav active"><a href="#" class="main-link">HOME</a></li>
       <li class="main-nav"><a href="#" class="main-link">PROJECTS</a></li>
@@ -34,6 +37,7 @@
         </ul>
       </li>
       </ul>
+      </div>
     </div>
   <div class="container main-line">
       <div class="col-lg-12">
@@ -41,31 +45,63 @@
       </div>
 
 
+<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; Main Paragraph -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
     <div class="container">
-    <div class="row">
-      <div class="col-lg-8">
-        <p class="main-p">My name is, as you can see above, Ben Margis. I'm starting this page as way to chronicle my progress as a web developer</p>
-        <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
+      <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+        <!--this is your intro paragraph - dont add this again-->
+        <p class="main-p">My name is, as you can see above, Ben Margis. I'm starting this page as way to chronicle my progress as a web developer. dncksdvn ncdsnv snv ndsklv sdln d  slvm sm mkslv fnsv vnklv kclsnvklv nvfkvn nvjfnv nsoirg smsdp ncdk nvih vfl fdanf dghtna thea cajd eos but a man in a garabbacg machine and he am eoeat ing ans dssdm nci soa sknvdral and the ,ncdsn ncsidn n ndjskds</p>
+
+        <!--This is the content that you are repeating-->
+          <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+            <h3>Project Title and Date <span class="blue"> 9/3/2017</span></h3>
+            <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
+          </div>
+        <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+            <p class="side-p main-p"> A brief description of what you did, learned about, what are you doing next? Do a little research onthe topic and state waht you learned.
+            </p>
+        </div>
+        <!--&#45;&#45;  End Repetition-->
+
+        <!--This is the content that you are repeating-->
+        <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+          <h3>Project Title and Date <span class="blue"> 9/3/2017</span></h3>
+          <img class="scrnshot" src="../assets/images/screen_aug_10.png" alt="Aug 10th screenshot">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+          <p class="side-p main-p"> A brief description of what you did, learned about, what are you doing next? Do a little research onthe topic and state waht you learned.
+          </p>
+        </div>
+        <!--&#45;&#45;  End Repetition-->
+
+
+
+
+        </div>
+
+<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; Goals -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+
+      <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+        <div ng-controller="IndexController">
+          <p ng-show="cat.name">Goals for the week of  {{cat.name}}</p>
+          <p ng-hide="cat.name">Enter a new goal</p>
+
+            <form novalidate>
+            Name:<input type="text" ng-model="cat.name"/><br/>
+              <input type="submit" ng-click="add(cat)" value="Save">
+            </form>
+
+            <h4>Goals</h4>
+              <ul>
+                <li ng-repeat="cat in cats">{{cat.name}}</li>
+              </ul>
+        </div>
       </div>
-      <div class="col-sm-4">
-      <div ng-controller="IndexController">
-        <p ng-show="cat.name">Goals for the week of  {{cat.name}}</p>
-        <p ng-hide="cat.name">Enter a new goal</p>
+    </div>
 
-        <form novalidate>
-      Name:<input type="text" ng-model="cat.name"/><br/>
-      <input type="submit" ng-click="add(cat)" value="Save">
-    </form>
 
-    <h4>Goals</h4>
-    <ul>
-      <li ng-repeat="cat in cats">{{cat.name}}</li>
-    </ul>
-  </div>
-  </div>
-  </div>
-  </div>
+
+
 
 
 <script src="/vendors/angular/angular.min.js" type="text/javascript"></script>
