--- a/server/public/styles/blogPage.css
+++ b/server/public/styles/blogPage.css
@@ -1,6 +1,3 @@
-/*div .jumbotron {*/
-    /*background-color: #2aabd2;*/
-/*}*/
 
 
 .h1, h1 {
@@ -9,7 +6,12 @@
 }
 
 .h2, h2 {
-    margin: 14px 0 0 0;
+    margin: 7px 0 0 0;
+    font-weight: bold;
+}
+
+.h3, h3 {
+    font-weight: bold;
 }
 
 .main-line {
@@ -19,9 +21,16 @@
 }
 
 .main-p {
-    color: #004d4d;
+    color: #939393;
     line-height: 1.5;
     letter-spacing: .5px;
+}
+.side-p{
+    margin: 61px 0 0 0;
+}
+
+.blue{
+    color:#00b3b3;
 }
 
 form {
@@ -29,8 +38,8 @@ form {
 }
 
 .scrnshot {
-    height: 350px;
-    width: 600px;
+    height: 100%;
+    width: 100%;
 }
 
 .nav {
@@ -50,4 +59,13 @@ ul .main-nav {
     color: #00b3b3;
     font-style:italic;
     background-color: white;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    background-color: transparent;
+}
+
+a:focus, a:hover {
+    color: #00b3b3;
+    font-style: italic;
 }
