--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -42,7 +42,7 @@
   <div class="container main-line">
       <div class="col-lg-12">
         </div>
-      </div>
+  </div>
 
 
 <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; Main Paragraph -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
@@ -61,7 +61,11 @@
             <p class="side-p main-p"> A brief description of what you did, learned about, what are you doing next? Do a little research onthe topic and state waht you learned.
             </p>
         </div>
+        <!--This is the secondary Blue line-->
+        <div class="secondary-line col-lg-12">
+        </div>
         <!--&#45;&#45;  End Repetition-->
+
 
         <!--This is the content that you are repeating-->
         <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
@@ -71,6 +75,9 @@
         <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
           <p class="side-p main-p"> A brief description of what you did, learned about, what are you doing next? Do a little research onthe topic and state waht you learned.
           </p>
+        </div>
+        <!--This is the secondary Blue line-->
+        <div class="secondary-line col-lg-12">
         </div>
         <!--&#45;&#45;  End Repetition-->
 
@@ -99,7 +106,15 @@
       </div>
     </div>
 
+<footer class="contact-footer">
+  <ul class="footer-ul">
+    <li><a href="#" class="footer-links">Github</a></li>
+    <li><a href="#" class="footer-links">LinkedIn</a></li>
+    <li><a href="#" class="footer-links">Resume</a></li>
+    <li><a href="#" class="footer-links">margis.ben@gmail.com</a></li>
+  </ul>
 
+</footer>
 
 
 
