--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -89,17 +89,18 @@
 <!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; Goals -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
       <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+
         <div ng-controller="IndexController">
-          <p ng-show="cat.name">Goals for the week of  {{cat.name}}</p>
-          <p ng-hide="cat.name">Enter a new goal</p>
+          <p ng-show="cat.name">Goals for the week of{{cat.name}}</p>
+          <h4 ng-hide="cat.name">Enter a new goal</h4>
 
             <form novalidate>
-            Name:<input type="text" ng-model="cat.name"/><br/>
-              <input type="submit" ng-click="add(cat)" value="Save">
+            <input class="field-goal" type="text" ng-model="cat.name"/><br/>
+              <input class="save-button" type="submit" ng-click="add(cat)" value="Save">
             </form>
 
             <h4>Goals</h4>
-              <ul>
+              <ul class="goal-list">
                 <li ng-repeat="cat in cats">{{cat.name}}</li>
               </ul>
         </div>
